--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TurboFit Pro - Transforme Seu Corpo em 30 Dias | Programa de Emagrecimento</title>
+    <title>TurboFit Pro2 - Transforme Seu Corpo em 30 Dias | Programa de Emagrecimento</title>
     <meta name="description" content="Descubra como o TurboFit Pro pode ajudar você a perder peso, ganhar músculos e aumentar sua confiança em apenas 30 dias. Resultados garantidos ou seu dinheiro de volta!">
     <meta name="keywords" content="emagrecimento, fitness, perda de peso, ganho de músculos, transformação corporal">
     <link rel="canonical" href="https://www.turbofitpro.com.br">
@@ -152,7 +152,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1>TurboFit Pro</h1>
+            <h1>TurboFit Pro2</h1>
             <p class="subheader">A Revolução Fitness que Transforma Seu Corpo em Apenas 30 Dias!</p>
         </div>
     </header>
